nessie/raw-manifests/deployment.nessie.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nessie
  namespace: nessie
  labels:
    app: nessie
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nessie
  template:
    metadata:
      labels:
        app: nessie
    spec:
      containers:
        - name: nessie
          image: projectnessie/nessie:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 19120
              name: http
            - containerPort: 9000
              name: nessie-mgmt
          resources:
            limits:
              cpu: "1"
              memory: "2Gi"
            requests:
              cpu: "500m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
