nessie/raw-manifests/service.nessie-mgmt.yaml
apiVersion: v1
kind: Service
metadata:
  name: nessie-mgmt
  namespace: nessie
  annotations:
    meta.helm.sh/release-name: nessie
    meta.helm.sh/release-namespace: nessie
  labels:
    app.kubernetes.io/instance: nessie
    app.kubernetes.io/name: nessie
    app.kubernetes.io/version: 0.105.0

spec:
  type: ClusterIP
  selector:
    app: nessie
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: nessie-mgmt
