nessie/raw-manifests/ingress.nessie.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nessie-ingress
  namespace: nessie
#  annotations:
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: 'nessie.local.kube'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nessie
                port:
                  number: 19120
#  tls:
#    - hosts:
#        - minio.local.kube
